k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mindelta
  labels:
    name: mindelta
    environment: production
